<resources>
    <string name="app_name">transceiver-go</string>

    <!-- Misc -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Measurement buttons -->
    <string name="new_measurement">new measurement</string>
    <string name="new_wifi_measurement">new wifi measurement</string>
    <string name="new_internet_connection_measurement">new internet connection measurement</string>
    <string name="new_noise_measurement">new noise measurement</string>
    <string name="taken_wifi_measurement">Wifi measurement taken!</string>
    <string name="taken_internet_connection_measurement">Internet connection measurement taken!</string>
    <string name="taken_noise_measurement">Noise measurement taken!</string>

    <!-- Calibration -->
    <string name="calibration_title">Calibrate your Mic</string>
    <string name="calibration_explain">How it works:\n
    Calibrating your mic will take no more than few seconds, and it will ensure that your measured noise values are on par with everyone else according to your mic sensitivity! you just need to set both silence and clap thresholds, as explained below.
    </string>
    <string name="calibration_silence">Click the button and wait 3 seconds in a quiet environment. The dBm result value will be based on the average noise detected in these 3 seconds.</string>
    <string name="calibration_clap">Click the button and clap at least once at about 30cm from your phone microphone in the span of 3 seconds. The dBm result value will be based on the maximum noise detected in these 3 seconds. </string>
    <string name="silence_button">Set silence threshold</string>
    <string name="clap_button">Set clap threshold</string>
    <string name="silence_threshold">Silence Threshold (dBm)</string>
    <string name="clap_threshold">Clap Threshold (dBm)</string>
    <string name="noise_value">noise: %d</string>

    <!-- Import / Export -->
    <string name="exportdb">Share your progress!</string>
    <string name="importdb">Import your friends\' progress!</string>
    <string name="imported">Imported successfully to the database directory :D</string>
    <string name="wrong_db_version">Failed Import: Wrong database version :/</string>
    <string name="not_a_db">Failed Import: Selected file not compatible :(</string>

    <!-- Permissions -->
    <string name="permission_granted_bg_measurement">Permission granted! enable again to use the background measurements!</string>
    <string name="permission_denied">Permission denied! functionality not accessible :(</string>

    <!-- Bottom nav menu -->
    <string name="map">Map</string>
    <string name="game">Game map</string>
    <string name="something_else">Something else</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>

    <!-- Measurement preferences Titles -->
    <string name="measurements">Measurement Preferences</string>
    <string name="personalization">Personalization</string>

    <!-- Measurements preferences -->
    <string name="automatic_measurements">Automatic Measurements</string>
    <string name="measure_lte_umps">Measure LTE/UMPS</string>
    <string name="measure_wifi">Measure Wifi</string>
    <string name="measure_noise">Measure Noise</string>
    <string name="measure_interval">Measure Every (minutes)</string>
    <string name="num_kept_measurements">Measurement weight</string>
    <string name="noise_summary">Automatic noise measurements will be taken only when the app is in foreground</string>
    <string name="measurement_weight_summary">The higher the value, the more importance will be given to new measurements, while the older measurement will be considered less important</string>
    <string name="measure_interval_summary">If set to 0, measurements will be taken every 10 seconds</string>

    <!-- Battery Optimization message -->
    <string name="battery_msg_title">Disable battery optimization</string>
    <string name="battery_msg_text">To make sure background measurements are taken, please disable battery optimization for this app. Dismissing this message will enable automatic measurements only while the app is in foreground.</string>

    <!-- Merge DB message -->
    <string name="merge_msg_title">Databases will merge</string>
    <string name="merge_msg_text">A database generated with this username already exist, so choosing this username will merge its data with the ones from your database. Do you want to continue? Canceling will revert your username to the old one.</string>

    <!-- Message Preferences Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Layer Preferences -->
    <string name="list_title">Type of data</string>
    <string name="list_dialog_title">Select the data to visualize</string>
    <string name="none">None</string>
    <string name="noise">Noise</string>
    <string name="network">Network</string>
    <string name="wifi">Wi-fi</string>
    <string name="available_maps_title">Available maps</string>
    <string name="delete_unselected_maps">Delete unselected maps</string>
    <string name="delete_maps_dialog_title">Delete maps</string>
    <string name="delete_maps_dialog_text">Are you sure you want to delete those maps?</string>

    <!-- How to read the map -->
    <string name="color_high_title">High intensity</string>
    <string name="color_high_description">This color means that the average measurement of the area has an high value (e.g. noise: very loud, network: good connection)</string>
    <string name="color_medium_title">Medium intensity</string>
    <string name="color_medium_description">This color means that the average measurement of the area has a medium value</string>
    <string name="color_low_title">Low intensity</string>
    <string name="color_low_description">This color means that the average measurement of the area has a low value</string>


    <!-- Account Preferences -->
    <string name="account_name">Username</string>
    <string name="skin_color">Skin color</string>
    <string name="select_color">Select color</string>

    <!-- Colors -->
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="pink_soft">Pink soft</string>
    <string name="pink_strong">Pink strong</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="gray">Gray</string>
    <string name="skin_00">Skin 00</string>
    <string name="skin_01">Skin 01</string>
    <string name="skin_02">Skin 02</string>
    <string name="skin_03">Skin 03</string>
    <string name="skin_04">Skin 04</string>
    <string name="skin_05">Skin 05</string>

    <!-- Shop -->
    <string name="purchase_denied">You don\'t have enough transceiver coins to purchase this item</string>

    <!-- Game -->
    <string name="cannot_give_prize">In order to receive the prize, you must measure</string> <!-- after this string there is the name of the measurement-->
    <string name="you_earned">You earned</string> <!-- number of coins -->
    <string name="coins">coins</string>
    <string name="too_far_title">You are too far</string>
    <string name="too_far_text">You must be in the same square of the target in order to collect the reward</string>
    <string name="measurements_and_reward_title">Select the measurements and collect the reward</string>
    <string name="generate_new_target">Generate new target</string>
</resources>