<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/type_of_data_entries"
        android:entryValues="@array/type_of_data_values"
        android:key="type_of_data"
        android:title="@string/list_title"
        app:defaultValue="@string/none"
        app:dialogTitle="@string/list_dialog_title"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:key="available_maps"
        android:title="@string/available_maps_title">

        <!-- Populated at runtime -->

    </PreferenceCategory>
</PreferenceScreen>