<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/map_dark"
        android:title="@string/map" />
    <item
        android:id="@+id/gameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/game_dark"
        android:title="@string/game" />
    <item
        android:id="@+id/accountSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/account_dark"
        android:title="@string/account" />
    <item
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settings_dark"
        android:title="@string/settings" />
</menu>