<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="user"
        android:key="account_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/account_name"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:entries="@array/skin_colors_entries"
        android:entryValues="@array/skin_colors_values"
        android:key="skin_color"
        android:title="@string/skin_color"
        app:defaultValue="skin_00"
        app:dialogTitle="@string/select_color"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>